# os-rest-api

./: README.md  os-rest-api.cabal  stack.yaml
linux/: Platform.hs
osx/: Platform.hs
src/: Main.hs
win32/: Platform.hs
