name:                os-rest-api
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/os-rest-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable os-rest-api
  hs-source-dirs:      src
  if os(linux)
      hs-source-dirs:  linux
  if os(darwin)
      hs-source-dirs:  osx
  if os(windows)
      hs-source-dirs:  win32
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock
                     , blaze-builder
                     , wai-cors
                     , wai-extra
                     , directory
                     , filepath
                     , mtl
                     , bytestring
                     , unordered-containers
                     , aeson
                     , time
                     , process
  if os(windows)
      build-depends:   Win32
